--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,19 @@
       {
         "select-name": "off"
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "listitem": "off",
+        "list": "off"
+      }
     ]
   }
 }
